--- a/.htaccess
+++ b/.htaccess
@@ -32,6 +32,7 @@ RewriteCond %{REQUEST_URI} !^/[0-9]+\..+\.cpaneldcv$
 RewriteCond %{REQUEST_URI} !^/\.well-known/pki-validation/[A-F0-9]{32}\.txt(?:\ Comodo\ DCV)?$
 
 RewriteRule ^fr/Chandail/ /chandail.php?lang=fr [L]
+RewriteRule ^fr/Chandail2/ /chandail2.php?lang=fr [L]
 
 RewriteRule ^fr/Cours/ /map.php?lang=fr [L]
 RewriteCond %{REQUEST_URI} !^/[0-9]+\..+\.cpaneldcv$
